--- a/yote_root/html/templates/yote_templates.html
+++ b/yote_root/html/templates/yote_templates.html
@@ -89,6 +89,33 @@
 
 
 
+<script type="text/template" class="yote_template_definition" template_name="edit_hash_with_select_scalars">
+    <# edit takes an object and a field to edit and builds a way to edit this. Uses hash method rather than
+       editing object directly. #>
+    <???
+         if( ctx.args.length == 4 ) {
+             var list = ctx.parse( ctx.args[ 0 ] );
+             ctx.vars.object = ctx.parse( ctx.args[ 1 ] );
+             ctx.vars.hash = ctx.args[ 2 ];
+             ctx.vars.field = ctx.parse( ctx.args[ 3 ] );
+             var curval = ctx.vars.object.hash_fetch( { name : ctx.vars.hash, key : ctx.vars.field } );
+             // TODO - escap the value there
+             return '<$$$ sel <select> $$$>' + list.map(function(it,idx) { return '<option ' + ( curval == it ? ' selected ' : '' ) + ' value="' + it + '">' + it + '</option>' } ).join('') + '</select>';
+         } else {
+             console.log( "error in template 'edit_hash_with_select_scalars' : wrong number of arguments." );
+             return '';
+         }
+         return '';
+    ???>
+    <?
+       $( ctx.controls.sel ).change( function() {
+           ctx.vars.object.hash( { name : ctx.vars.hash, key : ctx.vars.field, value : $( ctx.controls.sel ).val() } );
+           ctx.refresh();
+       } );
+    ?>
+</script>
+
+
 
 <script type="text/template" class="yote_template_definition" template_name="CreateLogin">
   <# 
