--- a/yote_root/html/templates/default_templates.html
+++ b/yote_root/html/templates/default_templates.html
@@ -90,11 +90,11 @@
 
     if( ctx.args.length > 1 ) {
         var template = ctx.args[ 0 ];
-        var pag_hash = ctx.parse( ctx.args[ 1 ] );
-        var pag_keys = pag_hash.keys();
+        var pag_hash = ctx.parent.parse( ctx.args[ 1 ] );
         var size     = ctx.args[ 2 ];
-        var more     = ctx.args.length > 3 ? ctx.args.slice( 3 ) : [];
         pag_hash.set_size( size );
+        var more     = ctx.args.length > 3 ? ctx.args.slice( 3 ) : [];
+        var pag_keys = pag_hash.keys();
         return pag_keys.map( function ( item, idx ) {
             return '<$$ _hashfillpagrow ' + template + ' ' + ctx.args[ 1 ] + ' ' + item + ' ' + more.join(' ') + ' $$>';
         } ).join('');
@@ -107,10 +107,10 @@
 <script type="text/template" class="yote_template_definition" template_name="_hashfillpagrow">
    <???
       var template = ctx.args[ 0 ]; // fillpagrow
-      var hash_pag = ctx.parse( ctx.args[ 1 ] );
-      var hash = hash_pag.to_hash();
+      var hash_pag = ctx.parent.parent.parse( ctx.args[ 1 ] );
+      var hash     = hash_pag.to_hash();
       var key      = ctx.args[ 2 ];
-      var more = ctx.args.length > 3 ? ctx.args.slice( 3 ) : [];
+      var more     = ctx.args.length > 3 ? ctx.args.slice( 3 ) : [];
       ctx.vars._ = hash[ key ];
       ctx.vars._hashkey_ = key;
       return '<$$ ' + template + ' ' + more.join( ' ' ) + ' $$>';
@@ -186,7 +186,6 @@
   <???
       if( ctx.args.length*1 == 1 ) {
           var val = ctx.parse( ctx.args[ 0 ] );
-          console.log( val );
           return val;
 	  }
       return 'xxxx';
